fixed images not showing up on portfolio

--- a/First-Responsive-Website/style.css
+++ b/First-Responsive-Website/style.css
@@ -89,7 +89,7 @@ body {
     
     #container {
         width: 375px;
-        min-width: 373px;
+        /* min-width: 375px; */
         margin:auto
     }   
 
