--- a/image-gallery/gallery.css
+++ b/image-gallery/gallery.css
@@ -58,6 +58,11 @@
   opacity: .88;
 }
 
+.pic:hover {
+  animation: tada;
+  animation-duration: 1s;
+}
+
 /* .overlay:hover .grow {
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
